@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-06T00:44:37Z",
+  "timestamp" : "2025-11-08T00:41:54Z",
   "count_outdated" : 278,
   "uniques_outdated" : 244,
-  "count" : 282,
-  "uniques" : 248,
+  "count" : 283,
+  "uniques" : 249,
   "clones" : [
     {
       "timestamp": "2025-10-27T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-11-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
